# ai_skills_collection_benchmarked

./: .coverage  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  coverage.xml  pyproject.toml  requirements-lock.txt
.github/: dependabot.yml  readme_badges.json
.github/workflows/: mypy.yml  offline-validation.yml  pip-audit.yml  release.yml  ruff.yml  secret-scan.yml
artifacts/benchmark-runs/2026-04-17-first-source-proofs/: manifest.json
artifacts/benchmark-runs/2026-04-17-first-source-proofs/bria-ai-bria-skill-skills-bria-ai-skill-md/skill-proof-bria-ai-bria-skill-skills-bria-ai-skill-md/: artifact.json  result.json  transcript.txt
artifacts/benchmark-runs/2026-04-17-independent-runtime-readiness-batch-01/: manifest.json
artifacts/benchmark-runs/2026-04-18-independent-runtime-readiness-batch-02/: manifest.json
artifacts/benchmark-runs/2026-04-18-independent-runtime-readiness-batch-02/bria-ai-bria-skill-skills-vgl-skill-md/creative-media-and-design-coco-captions/: artifact.json  result.json  transcript.txt
artifacts/benchmark-runs/2026-04-18-independent-runtime-readiness-batch-03/: manifest.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/: manifest.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/bfcl/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/browsergym/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/gittaskbench/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/ml-dev-bench/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/mle-bench/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/osworld/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/skill-bench/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/skillsbench/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/st-webagentbench/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/swe-bench/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/swe-skills-bench/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/terminal-bench/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/webarena/: artifact.json
artifacts/external-benchmark-integrations/2026-04-19-external-benchmark-method-smoke/webarena-verified/: artifact.json
benchmarks/independent-runtime-readiness/batch-01/: tasks.json
benchmarks/independent-runtime-readiness/batch-02/: tasks.json
benchmarks/independent-runtime-readiness/batch-03/: tasks.json
data/: benchmark_assignments.json  benchmark_scenarios.json  benchmark_tracks.json  best_practice_sources.json  external_benchmark_methods.json  skill_risk_audit.json  skills_catalog.json  source_lock.json  static_benchmark_results.json
docs/: agent-consumability.md  benchmark-results.md  benchmark-runner-requirements.md  benchmarks.md  external-benchmark-adapter-smoke.md  immutable-audit-model.md  installation.md  local-markdown-link-failures.md  methodology.md  objective-benchmark-methods.md  priority-skills.md  repaired-skill-readiness.md  runtime-benchmark-batch-01.md  runtime-benchmark-batch-02.md  runtime-benchmark-batch-03.md  selected-skills.md  skill-quality-findings.md  skill-risk-findings.md  source-policy.md
docs/catalog/: index.md
docs/catalog/by-category/: agent-infrastructure-skill-creation.md  cloud-azure-microsoft-sdks.md  coding-refactoring-repository-automation.md  communication-productivity-support.md  creative-media-design.md  devops-cloud-operations.md  documents-spreadsheets-presentations.md  finance-commerce-forecasting.md  frontend-ui-browser-automation.md  game-mobile-visual-qa.md  omero-django-docker-lab-infrastructure.md  science-research-data-analysis.md  search-retrieval-web-automation.md  security-compliance-risk.md  testing-qa-benchmarking.md
evaluators/: benchmark_run_artifact.schema.json  external_benchmark_method_smoke.schema.json  generic_workflow_result.schema.json  repaired_skill_readiness.schema.json  source_grounded_skill_proof.schema.json
included/agent-ready/: README.md  manifest.json
included/priority/: README.md  manifest.json
included/repaired/skills/: manifest.json
included/selected/: README.md  manifest.json
included/skills/: README.md  manifest.json
tests/: conftest.py  helpers.py  test_benchmark_artifacts.py  test_build_catalog_components.py  test_catalog_data.py  test_catalog_integrity.py  test_create_independent_runtime_batch.py  test_create_source_proof_batch.py  test_documentation_contracts.py  test_evaluate_external_benchmark_methods.py  test_generator_parsers.py  test_hash_portability.py  test_mirror_integrity.py  test_quality_and_security.py  test_readme_badges.py  test_repaired_skills_and_external_benchmarks.py  test_security_patterns.py  test_tools_cli_contract.py  test_validate_source_lock.py
tools/: audit_skill_quality.py  build_catalog.py  check_benchmark_artifact.py  check_no_secret_patterns.py  create_independent_runtime_batch.py  create_repaired_skill_overlays.py  create_source_proof_batch.py  evaluate_external_benchmark_methods.py  report_local_markdown_link_failures.py  run_static_benchmarks.py  update_readme_badges.py  validate_catalog.py  validate_source_lock.py
tools/_lib_b/: __init__.py  determinism.py  frontmatter_utils.py  hashing.py  io_utils.py  logging_utils.py
tools/_lib_c/: __init__.py  _catalog.py  _diff.py  _io.py  _progress.py  _schema.py
(+4162 files in other folders)
