[project]
name = "ai-skills-collection-benchmarked"
version = "0.1.0"
description = "Evidence-backed AI skills catalog with real workflow benchmark definitions."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "skills", "benchmarks", "catalog"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.0",
  "pytest-xdist>=3.6.0",
  "pytest-cov>=7.0.0",
  "coverage>=7.6.0",
  "hypothesis>=6.115.0",
]
lint = [
  "ruff>=0.15.0",
  "mypy>=1.20.0",
  "types-PyYAML>=6.0.12",
]
security = [
  "pip-audit>=2.10.0",
  "pip-tools>=7.5.0",
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=tools",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml:coverage.xml",
]
filterwarnings = [
  "error",
  # Silence harmless third-party DeprecationWarnings that are outside this repo's control.
  "ignore::DeprecationWarning:_pytest",
]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
  ".venv",
  "build",
  "included/skills",       # immutable upstream mirrors per AGENTS.md
  "included/repaired",     # generated overlays (provenance copies are upstream text)
  "included/agent-ready",  # generated entrypoints
  "artifacts",             # recorded evidence
]

[tool.ruff.lint]
# Start with a sensible high-signal set: pycodestyle errors (E), pyflakes (F),
# bugbear (B), simplify (SIM), pyupgrade (UP), isort (I). No formatter conflicts.
select = ["E", "F", "B", "SIM", "UP", "I"]
ignore = [
  "E501",   # line length handled by ruff format
  "B008",   # function call in default arg (argparse defaults are common here)
  "SIM108", # ternary preference (sometimes hurts readability)
  "UP015",  # open() default mode "r" is fine and explicit
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are fine in tests
"tools/build_catalog.py" = ["E741"]  # legacy single-char names in domain code
# Tool scripts use a sys.path.insert(...) shim before importing sibling tools,
# which is the established convention in this repo and is exercised by every
# CI job. Allow E402 (module-import-not-at-top-of-file) on these files only.
"tools/audit_skill_quality.py" = ["E402"]
"tools/create_independent_runtime_batch.py" = ["E402"]
"tools/create_repaired_skill_overlays.py" = ["E402"]
"tools/create_source_proof_batch.py" = ["E402"]
"tools/run_static_benchmarks.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
files = ["tools", "tests"]
exclude = [
  "^\\.venv/",
  "^build/",
  "^included/",
  "^artifacts/",
]
# tools/ is a flat directory of scripts and tests/ is a flat test package; we
# avoid the "found twice" ambiguity by treating them as two namespace package
# bases (no __init__.py needed in either).
explicit_package_bases = true
namespace_packages = true
mypy_path = "tools"
# Lenient on first pass: focus on *true* type errors, not gradual-typing noise.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
# We are not adding annotations to every function in the legacy code; require
# them only where the author has signalled types. Tighten over time.
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.coverage.run]
branch = true
source = ["tools"]
omit = [
  "tools/_lib_b/__init__.py",  # re-export shim
  "tools/_lib_c/__init__.py",
]
# parallel + concurrency multiprocessing lets pytest-xdist workers merge cleanly
parallel = true
concurrency = ["multiprocessing"]

[tool.coverage.paths]
# Make absolute paths from xdist workers collapse back onto the single repo view.
source = [
  "tools",
  "*/ai_skills_collection_benchmarked/tools",
]

[tool.coverage.report]
exclude_also = [
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
]
# Floor below the current measured coverage (49.2%) so CI enforces a
# no-regression gate immediately while we raise the bar per deep-rewrite pass.
# Re-measure and increase after each batch of rewrites.
fail_under = 45
show_missing = true
skip_covered = true
precision = 1
